[gd_scene load_steps=34 format=3 uid="uid://cgqldht5h0lp7"]

[ext_resource type="Script" path="res://Scripts/rhythm_game_screen.gd" id="1_u1iya"]
[ext_resource type="Texture2D" uid="uid://d2jh7t550a7l8" path="res://Sprites/3.png" id="2_y82fn"]
[ext_resource type="Script" path="res://scripts/rhythm.gd" id="3_dd3rv"]
[ext_resource type="PackedScene" uid="uid://bdv03821t1fbq" path="res://Scenes/UI/rhythm_note.tscn" id="4_6yd2o"]
[ext_resource type="PackedScene" uid="uid://dcglolmwry002" path="res://Scenes/UI/miss_popup.tscn" id="5_gu8r3"]
[ext_resource type="Script" path="res://Scripts/dialogue.gd" id="5_tw8ck"]
[ext_resource type="PackedScene" uid="uid://bjpoyliyupyqp" path="res://Scenes/UI/dialogue_option.tscn" id="6_gsqgo"]
[ext_resource type="PackedScene" uid="uid://brdheh51l3qks" path="res://Scenes/UI/bad_popup.tscn" id="6_ju5jo"]
[ext_resource type="PackedScene" uid="uid://y4luavrw6fox" path="res://Scenes/UI/okay_popup.tscn" id="7_arxmi"]
[ext_resource type="StyleBox" uid="uid://fxyj8hn6d8id" path="res://Style/style_box_flat.tres" id="7_bldjm"]
[ext_resource type="Script" path="res://Scripts/dialogue_box.gd" id="8_5k541"]
[ext_resource type="PackedScene" uid="uid://cer4k85kawh0k" path="res://Scenes/UI/good_popup.tscn" id="8_58pgq"]
[ext_resource type="LabelSettings" uid="uid://cb5ugextvxap5" path="res://Style/label_settings.tres" id="9_42hfe"]
[ext_resource type="PackedScene" uid="uid://bml6s31gf1mpy" path="res://Scenes/UI/great_popup.tscn" id="9_ft756"]
[ext_resource type="AudioStream" uid="uid://ccwcnbidkkjxf" path="res://Audio/tutorial pt 1.mp3" id="15_myd6t"]
[ext_resource type="Script" path="res://Scripts/DynamicMusic.gd" id="16_43nax"]
[ext_resource type="AudioStream" uid="uid://b7llm4ooid77e" path="res://Audio/tutorial pt2.mp3" id="17_7g7rx"]
[ext_resource type="AudioStream" uid="uid://5j45eo3xsvp2" path="res://Audio/tutorial pt3.mp3" id="18_23yam"]
[ext_resource type="AudioStream" uid="uid://xnlb7vso2u2s" path="res://Audio/tutorial pt4.mp3" id="19_rpv6v"]

[sub_resource type="Gradient" id="Gradient_8locq"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8ypnh"]
gradient = SubResource("Gradient_8locq")

[sub_resource type="Gradient" id="Gradient_q28l7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.924369, 0.19816, 0.252588, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nhl5c"]
gradient = SubResource("Gradient_q28l7")

[sub_resource type="Gradient" id="Gradient_1c6gt"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.384314, 0.8, 0.145098, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f1oke"]
gradient = SubResource("Gradient_1c6gt")
width = 32
height = 32

[sub_resource type="Gradient" id="Gradient_6pnel"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.383406, 0.798426, 0.143755, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j0v77"]
gradient = SubResource("Gradient_6pnel")

[sub_resource type="Gradient" id="Gradient_vbo6e"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.821789, 0.821789, 0.821789, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lrsc3"]
gradient = SubResource("Gradient_vbo6e")

[sub_resource type="Gradient" id="Gradient_g23c4"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.647261, 0.116715, 0.144658, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oms63"]
gradient = SubResource("Gradient_g23c4")

[sub_resource type="Gradient" id="Gradient_lv5lr"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sciba"]
gradient = SubResource("Gradient_lv5lr")

[node name="RhythmGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u1iya")

[node name="HealthMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 30

[node name="HealthBar" type="TextureProgressBar" parent="HealthMarginContainer"]
layout_mode = 2
size_flags_vertical = 0
step = 0.0
value = 100.0
nine_patch_stretch = true
stretch_margin_top = 20
stretch_margin_bottom = 20
texture_under = SubResource("GradientTexture1D_8ypnh")
texture_progress = SubResource("GradientTexture2D_nhl5c")

[node name="PortraitContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 150

[node name="OpponentPortrait" type="TextureRect" parent="PortraitContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("2_y82fn")
expand_mode = 3

[node name="RatingAnimRect" type="TextureRect" parent="PortraitContainer/OpponentPortrait"]
layout_mode = 1
offset_left = -14.0
offset_top = 26.0
offset_right = 24.0
offset_bottom = 77.0
texture = SubResource("GradientTexture2D_f1oke")
expand_mode = 1

[node name="PlayerPortrait" type="TextureRect" parent="PortraitContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("2_y82fn")
expand_mode = 3
flip_h = true

[node name="Rhythm" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_dd3rv")
note_scene = ExtResource("4_6yd2o")
max_note_distance = 40.0
miss_popup = ExtResource("5_gu8r3")
bad_popup = ExtResource("6_ju5jo")
okay_popup = ExtResource("7_arxmi")
good_popup = ExtResource("8_58pgq")
great_popup = ExtResource("9_ft756")

[node name="ColorRect" type="ColorRect" parent="Rhythm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -226.5
offset_right = 5.0
offset_bottom = 226.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.301961)

[node name="ColorRect2" type="ColorRect" parent="Rhythm/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -80.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.787759, 0.787759, 0.787759, 1)

[node name="ColorRect3" type="ColorRect" parent="Rhythm/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -52.0
offset_right = 5.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0

[node name="NoteSpawnPoint" type="Marker2D" parent="Rhythm/ColorRect"]
position = Vector2(5, 16.5)

[node name="TargetCenter" type="Marker2D" parent="Rhythm/ColorRect"]
position = Vector2(5, 416.5)

[node name="PopupCenter" type="Marker2D" parent="Rhythm/ColorRect"]
position = Vector2(49, 416.5)

[node name="Notes" type="Control" parent="Rhythm"]
anchors_preset = 0

[node name="Dialogue" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_tw8ck")
dialogue_option_scene = ExtResource("6_gsqgo")
good_rating_texture = SubResource("GradientTexture1D_j0v77")
meh_rating_texture = SubResource("GradientTexture1D_lrsc3")
bad_rating_texture = SubResource("GradientTexture1D_oms63")

[node name="OpponentDialogueBox" type="Panel" parent="Dialogue"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -281.0
offset_right = -596.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("7_bldjm")
script = ExtResource("8_5k541")

[node name="Label" type="Label" parent="Dialogue/OpponentDialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 18.0
offset_right = -27.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
text = "Blablablablablablablablabla"
label_settings = ExtResource("9_42hfe")

[node name="RespondTimeLeftBar" type="TextureProgressBar" parent="Dialogue/OpponentDialogueBox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -26.0
offset_right = -31.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
step = 0.0
value = 30.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_sciba")

[node name="RandomPopupContainer" type="Control" parent="Dialogue"]
anchors_preset = 0
offset_left = 650.0
offset_top = 112.0
offset_right = 1089.0
offset_bottom = 589.0

[node name="DynamicMusic" type="AudioStreamPlayer" parent="."]
script = ExtResource("16_43nax")
audio_streams = Array[AudioStream]([ExtResource("15_myd6t"), ExtResource("17_7g7rx"), ExtResource("18_23yam"), ExtResource("19_rpv6v")])
intensity_speeds = Array[float]([200.0, 300.0, 400.0, 500.0])
divisions = Array[int]([4, 8, 4, 8])
bpms = Array[float]([113.744, 113.946, 152.381, 152.866])
